# seaweed-matching

./: .gitignore  2025-01-17_image_loading_optimization_auto_folder_creation.md  DESIGN.md  PERFORMANCE_DECISION.md  PYTHON_TO_RUST_CHECKLIST.md  REQUIREMENTS.md  TASKS.md  collect_filenames.py  components.json  config_manager.py  delete_manager.py  file_count_monitor.py  file_count_monitor_standalone.py  file_count_worker.py  file_matcher.py  file_operations.py  group_manager.py  image_loader.py  log_panel.py  main.py  main_qml.py  monitoring_app.py  nir_app.py  nir_spectrum_monitor.py  package-lock.json  package.json  preview_dialog.py  requirements.txt  tailwind.config.js  tooltips.py  ui_components.py  utils.py
matching_codex_tauri/: .gitignore
matching_codex_tauri/python_backend/: file_matcher.py  file_operations.py  requirements.txt
models/: __init__.py  group_model.py  stats_model.py
python_backend/: README.md  server.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  delete_operations.rs  dialog.rs  file_hash.rs  file_operations.rs  file_stats.rs  file_watcher.rs  files.rs  folder_operations.rs  group.rs  image.rs  matcher.rs  mod.rs  nir_operations.rs  nir_spectrum.rs  python.rs  timestamp.rs
src-tauri/src/models/: config.rs  file_info.rs  group.rs  image_info.rs  matcher.rs  mod.rs  nir_bundle.rs  spectrum.rs
src-tauri/src/python/: mod.rs  process.rs
src-tauri/src/utils/: config.rs  file_watcher.rs  image_cache.rs  mod.rs  spectrum_analyzer.rs  timestamp.rs
src/lib/: utils.ts
(+28 files in other folders)
