[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 5.1: File system watching
notify = "6.1"
notify-debouncer-full = "0.3"

# Phase 5.2: Parallel file processing
rayon = "1.10"
walkdir = "2.4"
fs_extra = "1.3"
regex = "1.10"

# Phase 5.3: Image metadata
image = "0.25"

# Phase 5.4: Pattern matching and hashing
glob = "0.3"
sha2 = "0.10"
hex = "0.4"

# Phase 5.6: Timestamp utilities
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

# Phase 5.7: Config management
dirs = "5.0"

# Phase 6.4: Image caching and thumbnails
lru = "0.12"

# Phase 8.4: NIR spectrum monitoring
csv = "1.3"

# Phase 8.6: Group management
uuid = { version = "1.0", features = ["v4", "serde"] }

